--- a/SuratKeterangan.html
+++ b/SuratKeterangan.html
@@ -3,21 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulir Surat Keterangan Mahasiswa Aktif</title>
 </head>
 <body bgcolor="AntiqueWhite">
-    <table align="center" width="95%" border="1"cellpadding="5" cellspacing="0">
-        <th align="center"><h1>Formulir Surat Keterangan Mahasiswa Aktif</h1> </th>
-    </table><br>
-    <table align="center" width="95%" border="1"cellpadding="5" cellspacing="0">
-        <th><input type="checkbox" name="option" value="1">
-        Record [Email] as the email to be included with my response<br>
-        <form action=""><label for="nama">Nama</label>
-        <input type="text" id="nama" name="nama" value="" required><br>
-        <label for="nrp">NRP</label><br>
-        <input type="text" id="nrp" name="nrp" value=""required><br></form>
-        
-        </th>
-    </table>
+    <h2 align="center">Formulir Surat Keterangan Mahasiswa Aktif</h2>
+    <form>
+        <table align="center" border="0">
+            <tr>
+                <td colspan="2">
+                    <input type="checkbox"> Record [Email] as the email to be included with my response
+                </td>
+            </tr>
+            <tr>
+                <td>Nama</td>
+                <td><input type="text" name="nama"></td>
+            </tr>
+            <tr>
+                <td>NRP</td>
+                <td><input type="text" name="nrp"></td>
+            </tr>
+            <tr>
+                <td>Semester</td>
+                <td>
+                    <select name="semester">
+                        <option>Semester 1 (satu)</option>
+                        <option>Semester 2 (dua)</option>
+                        <option>Semester 3 (tiga)</option>
+                        <option>Semester 4 (empat)</option>
+                        <option>Semester 5 (lima)</option>
+                        <option>Semester 6 (enam)</option>
+                        <option>Semester 7 (tujuh)</option>
+                        <option>Semester 8 (delapan)</option>
+                        <option>Semester 9 (sembilan)</option>
+                        <option>Semester 10 (sepuluh)</option>
+                        <option>Semester 11 (sebelas)</option>
+                        <option>Semester 12 (dua belas)</option>
+                        <option>Semester 13 (tiga belas)</option>
+                        <option>Semester 14 (empat belas)</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Alamat</td>
+                <td><input type="text" name="alamat"></td>
+            </tr>
+            <tr>
+                <td>Keperluan Pengajuan</td>
+                <td><textarea name="keperluan"></textarea></td>
+            </tr>
+            <tr>
+                <td colspan="2">Saya setuju untuk mengirimkan data saya</td>
+            </tr>
+            <tr>
+                <td><input type="radio" name="persetujuan" value="setuju"> Setuju</td>
+                <td><input type="radio" name="persetujuan" value="tidak_setuju"> Tidak Setuju</td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Submit">
+                </td>
+            </tr>
+        </table>
+    </form>
+    <p align="center">
+        <a href="mailto:kaprodi.informatika@maranatha.edu,mo.it@it.maranatha.edu">Hubungi Kami</a>
+    </p>
+    <p align="center">&copy; 2372063 - Rafri Pria Pamungkas</p>
 </body>
 </html>
